반응형 추가

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <form action="">
       <button type="submit" class="resetbutton">reset</button>
     </form>
-    <span>
+    <span class="game-desc">
       반복, 연속된 숫자를 사용할 수 없습니다. / 기회는 10번 입니다. / 숫자 0을
       사용할 수 없습니다.</span
     >
